@startuml

interface ValueObject {
}
class SpuAggregate {
    - spuId: SpuId
    - spuCode: String
    - name: String
    - image: String
    - desc: String
    - price: Long
    - verifyState: ReviewState
    - productState: ProductState
    - removed: Boolean
    - inventory: Integer
    - model: ProductModel
    - type: ProductType
    - canReturn: Boolean
    - categoryId: CategoryId
    - brandId: BrandId
    - warehouseId: WarehouseId
    - supplierId: SupplierId
    - h5Detail: Text
    - saleVolume: Integer
    - deliveryRegion: String
'    - length: Long
'    - width: Long
'    - height: Long
'    - weight: Long
'    - boxNum: Integer
}
class SkuAggregate {
    - skuId: SkuId
    - productId: ProductId
    - skuCode: String
    - name: String
    - image: String
    - state: SkuState
    - specs: List<Specification>
    - inventory: Integer
    - secureInventory: Integer
    - price: Long
    - reduction: Long
    - promoteFee: Long
    - exchangePrice: Long
    - serviceFee: Long
    - exchangePoint: Long
    - netWorth: Long
    - barCode: String
}
class Specification {
    - specId: SpecId
    - name: String
    - value: String
    - type: SpecType
    - sort: Integer
    - parent: Specification
}
enum OperateType {
    + CREATE
    + UPDATE
    + DELETE
    + QUERY
}
enum ProductState {
    + IN_DRAFT
    + FOR_SALE
    + ON_SALE
    + IN_STOCK
}
SpuAggregate <--o SkuAggregate
Specification --> SkuAggregate
Specification --|> ValueObject

@enduml